--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Erpeng
-subtitle:
+title: erpeng's code area
+subtitle: https://github.com/erpeng
 description:
 keywords:
 author: erpeng
