--- a/_config.yml
+++ b/_config.yml
@@ -90,4 +90,8 @@ google_analytics: UA-134622925-1
 #google sitemap
 google_site_verification: KNwfpTSddWcU5WANVkfl4KURyWDdKayHnDyK3KldRXk
 
+#baidu sitemap
+baidu-site-verification: ivlU2dwGne
 
+#baidu analytics
+baidu_analytics: ac985f15fdb83e931a8de1dbcfe7a366
