--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -378,12 +378,12 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # more info please open https://valine.js.org
 valine:
-  enable: false
-  appid:  # your leancloud application appid
-  appkey:  # your leancloud application appkey
+  enable: true # 是否开启
+  appid: 0eyJQuH6v7IBasQSBsXetOnm-gzGzoHsz    # 上一步获取的 App ID
+  appkey: HGeORCEErDlAdyi9NyyICLEP  # 上一步获取的 App Key
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
   verify: false # Verification code
-  placeholder: Just go go # comment box placeholder
+  placeholder: 请在此输入您的留言 # 默认留言框内的文字
   avatar: mm # gravatar style
   guest_info: nick,mail,link # custom comment header
   pageSize: 10 # pagination size
@@ -811,4 +811,3 @@ images: images
 
 # Theme version
 version: 5.1.4
-
